2002-03-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c (scm_divide): Adapt code from libstdc++/f2c to void
	potential overflow problems.  Thanks to John W Eaton!

	* strop.c (string_capitalize_x): Treat characters as unsigned so
	that 8-bit chars work.  Thanks to David Pirotte!

2002-03-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (bin_SCRIPTS): Revive this decl, w/ initial element
	"guile-snarf" moved back from `noinst_SCRIPTS'.

2002-03-08  Neil Jerram  <neil@ossau.uklinux.net>

	* debug.h (SCM_MAX_FRAME_SIZE): Remove incorrect comment about use
	of SCM_MAX_FRAME_SIZE as a bit mask; it isn't used like this.

	* eval.c (SCM_CEVAL): Don't store scm_debug_eframe_size in
	debug.status.  It isn't needed, and it can overflow the bits
	reserved for it (which may lead to a segv or a GC abort).

2002-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (SCM_HEAP_SEG_SIZE, CELL_UP, CELL_DN, DOUBLECELL_ALIGNED_P,
	NEXT_DATA_CELL, init_heap_seg, alloc_some_heap), gc.h (struct
	scm_cell, struct scm_t_cell, SCM_CELLPTR, SCM_GC_CARD_SIZE,
	SCM_GC_IN_CARD_HEADERP), tags.h (SCM_CELLP):  Renamed the struct
	scm_cell and all its uses to scm_t_cell in accordance to Guile's
	naming scheme for types.  The type name scm_cell is deprecated.

2002-02-26  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Update path to pre-inst-guile automake frag.

2002-02-21  Neil Jerram  <neil@ossau.uklinux.net>

	* stacks.c, stacks.h (scm_t_stackype): Renamed to scm_stack_type
	everywhere.

	* unif.c (scm_array_to_list): Correct name, which had been
	accidentally changed to scm_t_arrayo_list!

2002-02-11  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (bin_PROGRAMS): Move `guile_filter_doc_snarfage'
	to `noinst_PROGRAMS'.
	(bin_SCRIPTS): Move all values to `noinst_SCRIPTS'; delete.
	(noinst_PROGRAMS, noinst_SCRIPTS): New.

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (AUTOMAKE_OPTIONS): Replace "foreign" with "gnu".
